manifests/freshrss/freshrss/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: freshrss
  name: freshrss-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
      - image: docker.io/freshrss/freshrss:1.26.3-alpine
        name: freshrss
        ports:
        - containerPort: 80
