manifests/freshrss/freshrss/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  labels:
    app: freshrss
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik" 
spec:
  tls:
  - hosts:
    - rss.termz.xyz
    - rss.terminalnode.xyz
    secretName: freshrss-tls-secret
  rules:
  - host: "rss.termz.xyz"
    http: &http-routing
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss-svc
            port:
              number: 80
  - host: "rss.terminalnode.xyz"
    http: *http-routing
